# requirements-generator

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev  ENHANCED_IMPLEMENTATION.md  README.md  alembic.ini  architecture-decision-records.md  compliance-security-requirements.md  diagram-workflows.md  docker-compose.yml  epics-and-features.md  main.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  real-time-alternatives.md  tailwind.config.js  technology-stack-recommendations.md  test_monitoring_log.md
.github/workflows/: ci.yml  dependency-update.yml  deploy.yml  release.yml
docs/: DEVELOPMENT_PLAN.md  business-context-financial.md  domain-model.md  integration-architecture.md  non-functional-requirements.md  session-state-management.md  technical-specifications.md  updated-technical-specifications.md  vision.md
migrations/: env.py
migrations/versions/: 2025_09_19_2212_4537f5e8b292_initial_database_schema.py
playwright-report/: index.html
scripts/: dev.sh  init-db.sql
src/: __init__.py  config.py  config_dev.py  main.py  main_dev.py  main_simple.py
src/ai/: enhanced_service.py  mock_openai_service.py  models.py  routes.py  schemas.py  service.py
src/auth/: __init__.py  jwt_handler.py  models.py  repository.py  routes.py  schemas.py  service.py
src/domain/: __init__.py
src/domain/models/: __init__.py  aggregate_root.py  bounded_context.py  domain_entity.py  domain_services.py  value_objects.py
src/domain/service/: __init__.py
src/examples/: __init__.py  integration_examples.py
src/projects/: __init__.py  models.py  repository.py
src/requirements/: __init__.py  advanced_routes.py  enhanced_service.py  markdown_generator.py  models.py  repository.py  routes.py  schemas.py  service.py
src/shared/: __init__.py  database.py  database_seed.py  dependencies.py  exceptions.py  middleware.py  models.py  redis_client.py  routes.py  tenant_middleware.py
src/tenants/: __init__.py  models.py  repository.py  routes.py  schemas.py  service.py
src/web/: __init__.py  routes.py
static/css/: input.css  output.css
static/js/: navigation.js
templates/layouts/: base.html
templates/pages/: dashboard.html  login.html  register.html  tenant_select.html  tenant_setup.html
test-results/: .last-run.json
test-results/admin-flow-Admin-User-Mana-f445d--management-page-for-admins-chromium/: error-context.md
test-results/auth-flow-Authentication-F-185c8-ut-non-existent-credentials-chromium/: error-context.md
test-results/auth-flow-Authentication-F-85690-ssword-toggle-functionality-chromium/: error-context.md
test-results/auth-flow-Authentication-Flow-should-validate-email-format-chromium/: error-context.md
test-results/auth-flow-Navigation-and-UI-should-have-responsive-design-chromium/: error-context.md
test-results/auth-flow-Registration-Flo-6cf8d-egistration-with-valid-data-chromium/: error-context.md
test-results/auth-flow-Registration-Flo-ca7f4-idate-password-confirmation-chromium/: error-context.md
test-results/auth-flow-Registration-Flow-should-validate-required-fields-chromium/: error-context.md
test-results/requirements-advanced-Adva-e7f79-roject-with-domain-analysis-chromium/: error-context.md
tests/: __init__.py  conftest.py  test_api.py  test_app.py  test_auth_service.py  test_database.py  test_enhanced_domain_models.py  test_enhanced_repositories.py  test_integration_auth.py  test_integration_requirements.py  test_markdown_generator.py  test_requirements_models.py  test_requirements_schemas.py  test_requirements_service.py
tests/frontend/: admin-flow.spec.ts  ai-assistant.spec.ts  auth-flow.spec.ts  end-to-end-workflows.spec.ts  requirements-advanced.spec.ts  requirements-crud.spec.ts  requirements-dashboard.spec.ts  requirements-documentation.spec.ts  requirements-isolated.spec.ts  requirements-project-creation.spec.ts  requirements-responsive-accessibility.spec.ts  tenant-flow.spec.ts  tenant-management-advanced.spec.ts  user-management-rbac.spec.ts  web-interface-integration.spec.ts
user-stories/: epic-1-detailed.md  epic-2-detailed.md  epic-3-detailed.md
(+4 files in other folders)
